--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -779,7 +779,7 @@ body > section {
     }
     .fa-mobile {
       font-size: 38px;
-      float: left;
+      // float: left;
       margin-right: 10px;
       margin-top: -6px;
     }
